--- a/app/src/main/res/layout/bookmark_store.xml
+++ b/app/src/main/res/layout/bookmark_store.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="40dp"
     app:cardCornerRadius="50dp"
@@ -16,40 +16,31 @@
             android:id="@+id/tv_bm_id"
             android:text="id"
             android:textSize="20dp"
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginLeft="30dp"
+            android:visibility="gone"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_bm_store_id"
             android:text="store_id"
             android:textSize="20dp"
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginLeft="30dp"
+            android:visibility="gone"/>
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/tv_bm_store_name"
             android:text="깐뚜치오"
             android:textSize="20dp"
-            android:layout_marginLeft="30dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_bm_store_lat"
-            android:text="경도: "
-            android:layout_marginLeft="30dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_bm_store_lng"
-            android:text="위도: "
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginLeft="30dp"
+            android:gravity="center_vertical"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_bm_store_category"
             android:text="카페"
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginLeft="30dp"
+            android:visibility="gone"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
